--- a/sound/ReadMe
+++ b/sound/ReadMe
@@ -1,1 +1,1 @@
-This contains the only current sound which runs in the background.
+This contains the only current sound which runs in the background. But sadly file size was too large.
